samples/_failures_safe/1761694558_7854d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16561cfb.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_16561cfb.c:144:25: error: missing terminating " character
  144 |         fprintf(stderr, "Invalid graph
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_16561cfb.c:144:9: error: expected expression at end of input
  144 |         fprintf(stderr, "Invalid graph
      |         ^~~~~~~
./samples/SAFE/__tmp_16561cfb.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_16561cfb.c:144:9: error: expected declaration or statement at end of input
